async script loading fixed flicker on page load

--- a/styles/stylesAll.css
+++ b/styles/stylesAll.css
@@ -253,3 +253,7 @@
     text-decoration: none;
     color: black;
 }
+
+.hiddenWhileLoading #mainContent{
+    display:none;
+}
